welcome.lessons.welcome.instructions.Instructions.scala.error
Program:2: error: not found: value baissebrosse
baissebrosse();avance();avance();droite();droite();recule();recule();gauche();avance(); 
^